# drake_learning_show_multistair

./: CMakeLists.txt  package.xml
dairlib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
dairlib/include/examples/PlanarWalker/: PlanarWalker2.urdf  run_gait_dircon.cc
dairlib/include/multibody/: multibody_utils.h
dairlib/include/multibody/kinematic/: kinematic_constraints.h
dairlib/include/systems/trajectory_optimization/dircon/: dircon.h  dircon_opt_constraints.h
dairlib/src/common/: find_resource.cc
dairlib/src/multibody/: multibody_utils.cc
dairlib/src/multibody/kinematic/: kinematic_constraints.cc  kinematic_evaluator.cc  kinematic_evaluator_set.cc  world_point_evaluator.cc
dairlib/src/solvers/: constraint_factory.cc  nonlinear_constraint.cc
dairlib/src/systems/trajectory_optimization/dircon/: dircon.cc  dircon_mode.cc  dircon_opt_constraints.cc  dynamics_cache.cc  l两步.txt
msg/: ourbot_input.msg
src/: dircon_ourbot_extension11_3d_fixed_ankle_all_motor_multistair.cc  dircon_ourbot_extension11_3d_fixed_ankle_all_motor_shangtiajie.cc  position_input_plot.py  readme.txt
src/extensionx_trajectory/: extension10_trajectory.cc  extension10_trajectory.h  extension11_trajectory.cc  extension11_trajectory_fixed_ankle.cc  extension11_trajectory_fixed_ankle_allmotor.cc  extension11_trajectory_fixed_ankle_allmotor.h  extension11_trajectory_fixed_ankle_pitch.cc  extension9_trajectory.cc  extension9_trajectory.h
src/priordata/: gammda_c_planed_outsereach_select112_fixed.txt  lammda_c_planed_outsereach_select112_fixed.txt  lammda_planed_outsereach_select112_fixed.txt  random_x_search112_fixed_ankle.txt  readme.txt  x_planed_outsearch.txt
src/priordata/tol=10_-5,floatfoot=10_-5/0/: random_u_search112_fixed_ankle.txt  random_x_search112_fixed_ankle.txt  readme.txt
src/priordata/完整一步上台阶2/: random_u_search112_fixed_ankle.txt  random_x_search112_fixed_ankle.txt  u_planed_outsearch_backup.txt  x_planed_outsearch.txt
src/priordata/完整步上台阶版/: random_u_search112_fixed_ankle.txt  random_x_search112_fixed_ankle.txt  u_planed_outsearch.txt  x_planed_outsearch.txt
src/priordata/负重五千克可复现/: random_u_search112_fixed_ankle.txt  u_planed_outsearch.txt
src/searchdata/: gammda_c_planed_outsereach_select112_fixed.txt  lammda_c_planed_outsereach_select112_fixed.txt  lammda_planed_outsereach_select112_fixed.txt  random_u_search112_fixed_ankle.txt  random_u_search112_fixed_ankle_ik.txt  random_x_search112_fixed_ankle(复件)[艺术家名称].txt  random_x_search112_fixed_ankle.txt  readme.txt  u_planed_outsearch.txt  u_planed_outsearch_ik.txt  x_planed_outsearch.txt  x_planed_outsearch_backup.txt  x_planed_outsearch_ik.txt
srv/: ourbot_inputsrv.srv  ourbot_state.srv
